build .so and make some comments related to RPN

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,5 @@
 all:
-	python setup.py build_ext --inplace
+	/dept/cas/weshiz/miniconda3/envs/opencv_tf_gpu/bin/python setup.py build_ext --inplace
 	rm -rf build
 clean:
 	rm -rf */*.pyc
